--- a/gb/19/1/12/n10971226.md
+++ b/gb/19/1/12/n10971226.md
@@ -1,27 +1,27 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/dwfgyx2217/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/dwfgyx2217/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>识别非裔人脸准确度高 海康威视背后是什么</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/01/GettyImages-95248362-600x400.jpg" />
 <h6>香港《南华早报》1月12日报导说，中共当局起草的官方文件证实，纽约市警察局“大规模”使用海康威视的监控产品。图为2009年12月25日，一名中共警察在法院外对等候法庭审判结果的记者偷偷录像。(FREDERIC J. BROWN/AFP/Getty Images)
 </h6>
 <hr>
-<p>【大纪元2019年01月13日讯】（大纪元记者林燕编译报导）近日，<a href="https://github.com/dwfgyx2217/djy/blob/master/gb/tag/%E7%BA%BD%E7%BA%A6%E5%B8%82%E8%AD%A6%E5%AF%9F%E5%B1%80.md">纽约市警察局</a>（NYPD）被曝使用的监控设备与中共<a href="https://github.com/dwfgyx2217/djy/blob/master/gb/tag/%E7%9B%91%E6%8E%A7%E7%B3%BB%E7%BB%9F.md">监控系统</a><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/tag/%E5%A4%A9%E7%BD%91.md">天网</a>（Sky Net）的一样，引发担忧。中共央企<a href="https://github.com/dwfgyx2217/djy/blob/master/gb/tag/%E6%B5%B7%E5%BA%B7%E5%A8%81%E8%A7%86.md">海康威视</a>发展监控设备源于中共大面积监控民众，首要任务不是打击普通刑事案件，而是迫害民众。美国去年已禁止政府机构购买海康威视的监控产品。</p>
-<p>香港《南华早报》星期六（1月12日）报导说，据其看过的中共政府研究机构和参与项目的中国监控设备公司文件，<a href="https://github.com/dwfgyx2217/djy/blob/master/gb/tag/%E7%BA%BD%E7%BA%A6%E5%B8%82%E8%AD%A6%E5%AF%9F%E5%B1%80.md">纽约市警察局</a>“大规模”使用<a href="https://github.com/dwfgyx2217/djy/blob/master/gb/tag/%E6%B5%B7%E5%BA%B7%E5%A8%81%E8%A7%86.md">海康威视</a>（Hikvision）的监控产品。</p>
+<p>【大纪元2019年01月13日讯】（大纪元记者林燕编译报导）近日，<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E7%BA%BD%E7%BA%A6%E5%B8%82%E8%AD%A6%E5%AF%9F%E5%B1%80.md#1">纽约市警察局</a>（NYPD）被曝使用的监控设备与中共<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E7%9B%91%E6%8E%A7%E7%B3%BB%E7%BB%9F.md#1">监控系统</a><ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%A4%A9%E7%BD%91.md#1">天网</a>（Sky Net）的一样，引发担忧。中共央企<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%B5%B7%E5%BA%B7%E5%A8%81%E8%A7%86.md#1">海康威视</a>发展监控设备源于中共大面积监控民众，首要任务不是打击普通刑事案件，而是迫害民众。美国去年已禁止政府机构购买海康威视的监控产品。</p>
+<p>香港《南华早报》星期六（1月12日）报导说，据其看过的中共政府研究机构和参与项目的中国监控设备公司文件，<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E7%BA%BD%E7%BA%A6%E5%B8%82%E8%AD%A6%E5%AF%9F%E5%B1%80.md#1">纽约市警察局</a>“大规模”使用<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%B5%B7%E5%BA%B7%E5%A8%81%E8%A7%86.md#1">海康威视</a>（Hikvision）的监控产品。</p>
 <p>海康威视是中共央企中国电子科技集团旗下企业，它和另一家中国企业大华被中共官方政策扶植，用“低价”策略已占据全球四成以上的监控市场，成为全球数一数二的闭路电视系统（CCTV）制造商。</p>
 <p>不过，美国国会2018年8月通过的2019年国防预算法案，已禁止联邦政府机构购买海康威视的监控产品。纽约市警察局采购海康威视的做法是否会有安全担忧？</p>
-<p>《南华早报》引用安全产品杂志（Security Products Magazine）的文章指，布朗士（Bronx）的低收入家庭住房开发项目河园大厦（River Park Towers）从2014年以来购置和安装了海康威视的<a href="https://github.com/dwfgyx2217/djy/blob/master/gb/tag/%E7%9B%91%E6%8E%A7%E7%B3%BB%E7%BB%9F.md">监控系统</a>，纽约市警察局可直接访问监控网络。</p>
-<figure id="attachment_10971339" style="width: 450px" class="wp-caption aligncenter"><a href="https://i.epochtimes.com/assets/uploads/2019/01/GettyImages-167275758.jpg"><img class="size-medium wp-image-10971339" src="https://i.epochtimes.com/assets/uploads/2019/01/GettyImages-167275758-450x302.jpg" alt="" width="450" b="302" /></a><figcaption class="wp-caption-text">2013年纽约市反恐中心内，警察和安保人员实时监控金融区和曼哈顿下城周边地区的4000多个监控摄像头，这套监控系统以伦敦的“钢铁之环”系统为蓝本。(John Moore/Getty Images)</figcaption></figure>
+<p>《南华早报》引用安全产品杂志（Security Products Magazine）的文章指，布朗士（Bronx）的低收入家庭住房开发项目河园大厦（River Park Towers）从2014年以来购置和安装了海康威视的<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E7%9B%91%E6%8E%A7%E7%B3%BB%E7%BB%9F.md#1">监控系统</a>，纽约市警察局可直接访问监控网络。</p>
+<figure id="attachment_10971339" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/01/GettyImages-167275758.jpg"><img class="size-medium wp-image-10971339" src="https://i.epochtimes.com/assets/uploads/2019/01/GettyImages-167275758-450x302.jpg" alt="" width="450" b="302" /></a><figcaption class="wp-caption-text">2013年纽约市反恐中心内，警察和安保人员实时监控金融区和曼哈顿下城周边地区的4000多个监控摄像头，这套监控系统以伦敦的“钢铁之环”系统为蓝本。(John Moore/Getty Images)</figcaption></figure>
 <h2>海康威视识别非裔的准确度高</h2>
 <p>纽约市警察局从未公开讨论为何要使用中共的监控软件和设备。外界认为，或许跟海康威视的产品可以不分种族、准确地识别人脸有关，而西方的一些技术对识别非裔的准确度不如白人高。</p>
 <p>海康威视的技术团队成员告诉《南华早报》，海康威视的监控技术没有种族差异，“在大量非裔社区中也运作良好。”另一位海康威视工程师也表示，经过多年的改进，该系统现在可以在夜间识别个人脸。</p>
 <p>海康威视的技术最早源于武汉大学和陕西省西安光学精密机械研究所的联合研究，旨在改善夜间监控录像的质量。因为光线低或红外摄像头生成的图像经常被扭曲和看不清楚。为此，研发人员创建了一种算法，通过学习现有的视频数据、准确地评估低质量图像中的细节，尤其是面部特征。</p>
-<p>相比之下，西方的一些技术对识别非裔的准确度不如白人高。麻省理工学院2018年2月的一项研究发现，微软的机器每次都能识别白人男性，但在识别黑人女性时，误差率超过20%。而谷歌的<a href="https://github.com/dwfgyx2217/djy/blob/master/gb/tag/%E4%BA%BA%E5%B7%A5%E6%99%BA%E8%83%BD.md">人工智能</a>在2015年曾将非洲裔美国人辨识为“大猩猩”、并为此道歉。</p>
-<p>据悉，微软和IBM等美国技术公司大多使用白人来改进他们的<a href="https://github.com/dwfgyx2217/djy/blob/master/gb/tag/%E4%BA%BA%E5%B7%A5%E6%99%BA%E8%83%BD.md">人工智能</a>技术。</p>
+<p>相比之下，西方的一些技术对识别非裔的准确度不如白人高。麻省理工学院2018年2月的一项研究发现，微软的机器每次都能识别白人男性，但在识别黑人女性时，误差率超过20%。而谷歌的<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%BA%BA%E5%B7%A5%E6%99%BA%E8%83%BD.md#1">人工智能</a>在2015年曾将非洲裔美国人辨识为“大猩猩”、并为此道歉。</p>
+<p>据悉，微软和IBM等美国技术公司大多使用白人来改进他们的<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%BA%BA%E5%B7%A5%E6%99%BA%E8%83%BD.md#1">人工智能</a>技术。</p>
 <h2>海康威视从中共大面积监控中获益</h2>
 <p>在惊讶中共监控技术领先的时候，更需要思考海康威视准确度高的背后是什么？</p>
-<p>海康威视是中共央企中国电子科技集团旗下企业。促成海康威视发展的主要助推力就是中共的“<a href="https://github.com/dwfgyx2217/djy/blob/master/gb/tag/%E5%A4%A9%E7%BD%91.md">天网</a>计划”（现已更名为平安城市，或安全城市）。</p>
-<figure id="attachment_10971352" style="width: 450px" class="wp-caption aligncenter"><a href="https://i.epochtimes.com/assets/uploads/2019/01/GettyImages-960895456-600x400.jpg"><img class="size-medium wp-image-10971352" src="https://i.epochtimes.com/assets/uploads/2019/01/GettyImages-960895456-600x400-450x300.jpg" alt="" width="450" b="300" /></a><figcaption class="wp-caption-text">新疆境内被中共当局严密监控的维吾尔族人。已有多方渠道证实，中共在新疆建立大量拘禁营，力图“转化”维吾尔穆斯林。(JOHANNES EISELE/AFP/Getty Images)</figcaption></figure>
+<p>海康威视是中共央企中国电子科技集团旗下企业。促成海康威视发展的主要助推力就是中共的“<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%A4%A9%E7%BD%91.md#1">天网</a>计划”（现已更名为平安城市，或安全城市）。</p>
+<figure id="attachment_10971352" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/01/GettyImages-960895456-600x400.jpg"><img class="size-medium wp-image-10971352" src="https://i.epochtimes.com/assets/uploads/2019/01/GettyImages-960895456-600x400-450x300.jpg" alt="" width="450" b="300" /></a><figcaption class="wp-caption-text">新疆境内被中共当局严密监控的维吾尔族人。已有多方渠道证实，中共在新疆建立大量拘禁营，力图“转化”维吾尔穆斯林。(JOHANNES EISELE/AFP/Getty Images)</figcaption></figure>
 <p>大陆中新网2017年9月的报导说，天网工程的首要任务不是打击普通刑事案件，而是“维稳”。</p>
 <p>《华尔街日报》在2017年刊文对比说，美国使用人脸识别技术是为了确认犯罪嫌疑人的身份，而中共则正快速运用新技术对中国公民进行监视。</p>
 <p>在新疆省境内，数百座清真寺安装的监控脸部识别摄像头都出自海康威视，人权运动人士指，海康威视的设备在镇压新疆1,100万名维吾尔人中扮演重要角色。</p>
@@ -33,7 +33,7 @@
 <p>外界一直担心，因中共当局刻意放松行业监管，让中国科技初创企业通过访问更大的数据集来训练人工智能（AI）算法，从而加快赶超国外同行的步伐；但在不受法律约束的中共政府领导下、科技企业难以抵制遵守道德、不配合当局的监控行为。换言之，这类科技越是发达、结果就越是可怕。</p>
 <p>《科学》杂志在2018年2月发表文章总结说，中共发展人工智能有着“阴险的一面”，它寻求利用人工智能的技术进步进行监控和审查以及用于军事目的，人工智能被打磨成中共执政的工具。</p>
 <p>文章引述美国人工智能促进协会（AAAI）主席Subbarao Kambhampati的话说：“这正是令西方人对于人工智能心怀恐惧的地方。”</p>
-<figure id="attachment_10971356" style="width: 450px" class="wp-caption aligncenter"><a href="https://i.epochtimes.com/assets/uploads/2019/01/d50a8b5afcdc56be32f06ed0dc3c22fb-600x400.jpg"><img class="size-medium wp-image-10971356" src="https://i.epochtimes.com/assets/uploads/2019/01/d50a8b5afcdc56be32f06ed0dc3c22fb-600x400-450x300.jpg" alt="" width="450" b="300" /></a><figcaption class="wp-caption-text">北京长安街沿线，一根柱子装五至六个朝向不同方向的摄像头已经见怪不怪了。(Ed Jones/AFP/Getty Images)</figcaption></figure>
+<figure id="attachment_10971356" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/01/d50a8b5afcdc56be32f06ed0dc3c22fb-600x400.jpg"><img class="size-medium wp-image-10971356" src="https://i.epochtimes.com/assets/uploads/2019/01/d50a8b5afcdc56be32f06ed0dc3c22fb-600x400-450x300.jpg" alt="" width="450" b="300" /></a><figcaption class="wp-caption-text">北京长安街沿线，一根柱子装五至六个朝向不同方向的摄像头已经见怪不怪了。(Ed Jones/AFP/Getty Images)</figcaption></figure>
 <p>日本政策性银行国际协力银行（Japan Bank for International Cooperation）行长前田匡史（Tadashi Maeda）2018年接受《华尔街日报》采访时说，由于隐私问题，西方在收集大数据时遇到了很多问题；但像中国（中共）这样的“极权主义政权”不会考虑公民隐私，这才是让外界更加担心中共可能滥用大数据的原因。</p>
 <p>举例说，美国的科技公司出于道德、亦不敢配合政府“作恶”。谷歌曾表示，它的人工智能政策规定，“不会设计或部署人工智能”，用于“收集或使用信息进行违反国际公认规范的监控活动”。而中国国内的企业则完全没有这一自发的道德约束。</p>
 <h2>传联邦政府正在考虑制裁海康威视</h2>
@@ -48,44 +48,43 @@
 
 <hr>
 
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/19/1/12/n10971226.htm">识别非裔人脸准确度高 海康威视背后是什么</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/18/6/5/n10457052.htm">大学学习：做好这九步 成功完成作业（三）</a></li>
-> <li><a href="https://www.epochtimes.com/gb/18/5/29/n10437043.htm">大学学习：做好这九步 成功完成作业（二）</a></li>
-> <li><a href="https://www.epochtimes.com/gb/18/5/23/n10419796.htm">大学学习：做好这九步 成功完成作业（一）</a></li>
-> <li><a href="https://www.epochtimes.com/gb/18/3/9/n10203031.htm">12年级毕业成为大一新生 你要注意什么</a></li>
-> <li><a href="https://www.epochtimes.com/gb/17/5/15/n9146146.htm">英国大学考试季“驾到” 考前冲刺有妙招</a></li>
-> <li><a href="https://www.epochtimes.com/gb/17/1/19/n8721729.htm">写作关联力：品格篮球队</a></li>
-> <li><a href="https://www.epochtimes.com/gb/16/10/20/n8414529.htm">大学生活宝鉴（8）：大学生必备技能 如何做阅读笔记</a></li>
-> <li><a href="https://www.epochtimes.com/gb/16/10/5/n8368603.htm">大学生活宝鉴（7）：大学生阅读学术论文的必备技能</a></li>
-> <li><a href="https://www.epochtimes.com/gb/16/8/23/n8229165.htm">大学生活宝鉴（5）：大学生如何管理学习压力</a></li>
-> <li><a href="https://www.epochtimes.com/gb/16/8/8/n8180536.htm">大学生活宝鉴（4）：如何应对小组作业中的偷懒者</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869946.htm">大疫下解救有道 历史启示带您闯过武汉肺炎</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869721.htm">【历史上的瘟疫】瘟疫中走向衰亡的古罗马帝国</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/11/n11860850.htm">《推背图》56象之卦预言武汉肺炎惊人巧合</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/21/n11885487.htm">美国作家12年前“预言”武汉肺炎爆发</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883542.htm">【热点互动】围绕零号病人 官方为何讳莫如深</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/5/n11846854.htm">【我来说西游】黑风山怪窃袈裟</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/21/n11886677.htm">【唐靖远快评】北京2月底须控制疫情的秘密</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/17/n11801312.htm">【更新】肺炎扩散30国和地区 武汉死亡率高</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879658.htm">【独家】外逃求生？武汉一天出走2.8万人</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883520.htm">断网前奏？中共工信部批准设立根服务器</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11882631.htm">传刘真装叶克膜抢救？ 经纪人：一起帮她集气</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878461.htm">台歌手大支写歌呛WHO 嘲讽中共数据造假</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883801.htm">古天乐全球搜130万口罩 四类人获优先赠予</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878722.htm">钟楚红庆六十岁生日 无惧疫情照常聚餐</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/21/n11885487.htm">美国作家12年前“预言”武汉肺炎爆发</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879107.htm">钻石公主号隔离仍爆高感染率 医师揭4大原因</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883959.htm">刘真惊传叶克膜抢救 主动脉瓣狭窄有多危险？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11881805.htm">搭飞机和计程车留意这些事 降传染风险</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/11/20/n10864457.md#1">传美拟祭芯片出口禁令 制裁海康威视</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/8/27/n10670431.md#1">日官员：中共极权主义发展科技 威胁西方</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/8/5/n10616310.md#1">美国防法案 重创中国监控设备商海康威视</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/6/17/n10491052.md#1">加强监控？海康威视新技术可辨识少数民族</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/5/25/n10427601.md#1">美众院新法案 阻政府买海康威视等中国产设备</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/dwfgyx2217/djy/blob/master/gb/19/1/12/n10971226.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/dwfgyx2217/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/dwfgyx2217/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/5/4/n10363040.md#1">中美贸易可谈 人工智能科技之争难解</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/21/n9978292.md#1" target="_blank">文革中自杀的几个名人（8）“御用文人”吴晗</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/5/n11026306.md#1" target="_blank">冰天雪地 瑞典法轮功学员传真相 感动民众</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942593.md#1">【疫情透视】港抗疫显奇迹 天灭中共成保命符</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943372.md#1">“回国避疫”和“中国式撤侨”的真相</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943833.md#1">疫情肆虐 美国民众集体诉讼中共当局六被告</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/29/n11905232.md#1">蝗虫群攻官府异象 为何吃尽画像人头？</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11925830.md#1">被扒皮的法官</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/28/n11903572.md#1">末代国君的风范 顺从天意的元惠宗</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942373.md#1">图证蝗虫大军肆虐 中共急定预案恐难应对</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11940769.md#1">【新闻看点】病毒来自哪里？川普：中美都知道</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11941017.md#1">【现场视频】东莞虎门镇现大量防暴警察</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/1/19/n11805341.md#1">【思想领袖】史帕丁：中共寄生式经济 川普反制</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11945316.md#1">疫情冲击 水果卖不出 批发市场用铲车倒掉</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11945531.md#1">武汉人斥官员：给你改正机会 谁给我活命机会</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943288.md#1">古巨基宣布当爸 晒宝宝合照分享喜悦</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943213.md#1">又一好莱坞明星确诊 007邦女郎隔离在家</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/1/12/n10971226.htm">识别非裔人脸准确度高 海康威视背后是什么</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/19/1/12/n10971226.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
